<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/searchDialog">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="2dp"
        android:background="#BA0000">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/egaimage"
            android:scaleType="fitXY"
            android:padding="3dp"
            android:contentDescription="@string/egaIM"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/searchDialogheader"
            android:textColor="#FFFF00"
            android:textSize="16sp"
            android:text="@string/searchHead"
            android:layout_marginLeft="5dp"
            android:layout_gravity="center"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:textSize="20sp"
        android:textColor="#FFFFFF"
        android:text="@string/searchMess"
        android:id="@+id/searchDialogMessage"
        android:gravity="center"/>
    
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/searchHint"
        android:id="@+id/searchEditText"
        android:textColor="#FFFFFF"
        android:text=""
        android:textSize="20sp"
        android:padding="10dp"
        android:gravity="center"/>

</LinearLayout>