<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/infoHeader"
        android:textStyle="bold"
        android:padding="5dp"
        android:id="@+id/infoHead"
        android:textColor="#FFFFFF"
        android:layout_gravity="center_horizontal" />

    <ImageView
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:id="@+id/infoImage"
        android:src="@drawable/kevin"
        android:scaleType="centerInside"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/infoMessage"
        android:id="@+id/infoMessage"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:padding="10dp"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:text="@string/infoBtn"
        android:id="@+id/infoCloseBtn"
        android:textColor="#FFFF00"
        android:layout_gravity="center_horizontal" />
</LinearLayout>